test/compile_errors/err_issue64_shared_hashmap_insert_requires_mut_receiver.w
//! expect-error: method 'HashMap.insert' requires a mutable receiver

fn main:
    let lookup: HashMap[str, i32] = HashMap.new()
    let shared = &lookup
    shared.insert("a", 1)
